--- a/detalles.html
+++ b/detalles.html
@@ -27,7 +27,7 @@
 
     <section class="detalles-producto" id="detalles-producto">
         <div class="imagen-producto">
-            <img src="https://via.placeholder.com/800" alt="Nombre del Producto">
+            <img id="imagen-producto" src="" alt="Imagen del producto">
         </div>
         <div class="info-producto">
             <h3 id="nombre-producto">Nombre del Producto</h3>
