--- a/productos.html
+++ b/productos.html
@@ -11,12 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <picture>
-                    <!-- Imagen para celular (isotipo) -->
-                    <source srcset="images/logoo (1).jpeg" media="(max-width: 767px)">
-                    <!-- Imagen para tablet y laptop (logotipo) -->
-                    <img src="images/logoo (4).jpeg" alt="Vendetta Atic">
-                </picture>
+                <img id="logo-img" src="" alt="Vendetta Atic">
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Inicio</a></li>
