--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <picture>
-                    <!-- Imagen para celular (isotipo) -->
-                    <source srcset="images/logoo (1).jpeg" media="(max-width: 767px)">
-                    <!-- Imagen para tablet y laptop (logotipo) -->
-                    <img src="images/logoo (4).jpeg" alt="Vendetta Atic">
-                </picture>
+                <img id="logo-img" src="" alt="Vendetta Atic">
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Inicio</a></li>
@@ -25,6 +20,8 @@
             </ul>
         </nav>
     </header>
+    
+    
 
     <section class="hero">
         <div class="hero-content">
@@ -46,3 +43,4 @@
 
 </body>
 </html>
+
