--- a/muebles.html
+++ b/muebles.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img id="logo-img" src="" alt="Vendetta Atic">
+                <img id="logo-img" src="images/logoo (4).jpeg" alt="Vendetta Atic">
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Inicio</a></li>
