--- a/seleccion.html
+++ b/seleccion.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <nav>
             <div class="logo">
@@ -29,6 +30,7 @@
                     <h3>Cuadros</h3>
                 </a>
             </div>
+
             <div class="producto">
                 <a href="muebles.html">
                     <img src="images/TAGS Mueble.png" alt="Muebles">
@@ -41,6 +43,8 @@
     <footer>
         <p>&copy; 2025 Vendetta Atic. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
 
